python-compiler/tests/snapshots/lib__control_flow__nested_if_statements.snap
---
source: tests/control_flow.rs
expression: compile_source(source)
---
; ModuleID = 'main'
source_filename = "main"

@int_format_string = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@int_format_string.1 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.2 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.3 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1
@int_format_string.4 = private unnamed_addr constant [4 x i8] c"%d\0A\00", align 1
@float_format_string.5 = private unnamed_addr constant [4 x i8] c"%f\0A\00", align 1
@string_format_string.6 = private unnamed_addr constant [4 x i8] c"%s\0A\00", align 1

define i32 @main() {
entry:
  %y = alloca i64, align 8
  %x = alloca i64, align 8
  store i64 9221120237041090570, ptr %x, align 4
  store i64 9221120237041090580, ptr %y, align 4
  %x1 = load i64, ptr %x, align 4
  %y2 = load i64, ptr %y, align 4
  %check_qnan = and i64 %x1, 9221120237041090560
  %is_float = icmp ne i64 %check_qnan, 9221120237041090560
  %i64_to_f64 = bitcast i64 %x1 to double
  %extract_payload = and i64 %x1, 281474976710655
  %sign_bit = lshr i64 %extract_payload, 47
  %is_negative = icmp eq i64 %sign_bit, 1
  %sign_extend = or i64 %extract_payload, -281474976710656
  %signed_payload = select i1 %is_negative, i64 %sign_extend, i64 %extract_payload
  %payload_to_f64 = sitofp i64 %signed_payload to double
  %final_payload = select i1 %is_float, double %i64_to_f64, double %payload_to_f64
  %check_qnan3 = and i64 %y2, 9221120237041090560
  %is_float4 = icmp ne i64 %check_qnan3, 9221120237041090560
  %i64_to_f645 = bitcast i64 %y2 to double
  %extract_payload6 = and i64 %y2, 281474976710655
  %sign_bit7 = lshr i64 %extract_payload6, 47
  %is_negative8 = icmp eq i64 %sign_bit7, 1
  %sign_extend9 = or i64 %extract_payload6, -281474976710656
  %signed_payload10 = select i1 %is_negative8, i64 %sign_extend9, i64 %extract_payload6
  %payload_to_f6411 = sitofp i64 %signed_payload10 to double
  %final_payload12 = select i1 %is_float4, double %i64_to_f645, double %payload_to_f6411
  %cmptmp = fcmp olt double %final_payload, %final_payload12
  %bool_payload = zext i1 %cmptmp to i64
  %pyobject_bool = or i64 9221401712017801216, %bool_payload
  %check_qnan13 = and i64 %pyobject_bool, 9221120237041090560
  %is_float14 = icmp ne i64 %check_qnan13, 9221120237041090560
  %i64_to_f6415 = bitcast i64 %pyobject_bool to double
  %extract_payload16 = and i64 %pyobject_bool, 281474976710655
  %sign_bit17 = lshr i64 %extract_payload16, 47
  %is_negative18 = icmp eq i64 %sign_bit17, 1
  %sign_extend19 = or i64 %extract_payload16, -281474976710656
  %signed_payload20 = select i1 %is_negative18, i64 %sign_extend19, i64 %extract_payload16
  %payload_to_f6421 = sitofp i64 %signed_payload20 to double
  %final_payload22 = select i1 %is_float14, double %i64_to_f6415, double %payload_to_f6421
  %to_bool = fcmp one double %final_payload22, 0.000000e+00
  br i1 %to_bool, label %then, label %else

then:                                             ; preds = %entry
  %x23 = load i64, ptr %x, align 4
  %check_qnan24 = and i64 %x23, 9221120237041090560
  %is_float25 = icmp ne i64 %check_qnan24, 9221120237041090560
  %i64_to_f6426 = bitcast i64 %x23 to double
  %extract_payload27 = and i64 %x23, 281474976710655
  %sign_bit28 = lshr i64 %extract_payload27, 47
  %is_negative29 = icmp eq i64 %sign_bit28, 1
  %sign_extend30 = or i64 %extract_payload27, -281474976710656
  %signed_payload31 = select i1 %is_negative29, i64 %sign_extend30, i64 %extract_payload27
  %payload_to_f6432 = sitofp i64 %signed_payload31 to double
  %final_payload33 = select i1 %is_float25, double %i64_to_f6426, double %payload_to_f6432
  %cmptmp34 = fcmp ogt double %final_payload33, 5.000000e+00
  %bool_payload35 = zext i1 %cmptmp34 to i64
  %pyobject_bool36 = or i64 9221401712017801216, %bool_payload35
  %check_qnan37 = and i64 %pyobject_bool36, 9221120237041090560
  %is_float38 = icmp ne i64 %check_qnan37, 9221120237041090560
  %i64_to_f6439 = bitcast i64 %pyobject_bool36 to double
  %extract_payload40 = and i64 %pyobject_bool36, 281474976710655
  %sign_bit41 = lshr i64 %extract_payload40, 47
  %is_negative42 = icmp eq i64 %sign_bit41, 1
  %sign_extend43 = or i64 %extract_payload40, -281474976710656
  %signed_payload44 = select i1 %is_negative42, i64 %sign_extend43, i64 %extract_payload40
  %payload_to_f6445 = sitofp i64 %signed_payload44 to double
  %final_payload46 = select i1 %is_float38, double %i64_to_f6439, double %payload_to_f6445
  %to_bool47 = fcmp one double %final_payload46, 0.000000e+00
  br i1 %to_bool47, label %then48, label %else49

else:                                             ; preds = %entry
  br i1 false, label %print_string62, label %check_int59

ifcont:                                           ; preds = %print_end63, %ifcont50
  ret i32 0

then48:                                           ; preds = %then
  br i1 false, label %print_string, label %check_int

else49:                                           ; preds = %then
  br i1 false, label %print_string54, label %check_int51

ifcont50:                                         ; preds = %print_end55, %print_end
  br label %ifcont

check_int:                                        ; preds = %then48
  br i1 true, label %print_int, label %print_float

print_int:                                        ; preds = %check_int
  %printf_int = call i32 (ptr, ...) @printf(ptr @int_format_string, i64 1)
  br label %print_end

print_float:                                      ; preds = %check_int
  %printf_float = call i32 (ptr, ...) @printf(ptr @float_format_string, double 1.000000e+00)
  br label %print_end

print_string:                                     ; preds = %then48
  %printf_string = call i32 (ptr, ...) @printf(ptr @string_format_string, ptr inttoptr (i64 1 to ptr))
  br label %print_end

print_end:                                        ; preds = %print_string, %print_float, %print_int
  br label %ifcont50

check_int51:                                      ; preds = %else49
  br i1 true, label %print_int52, label %print_float53

print_int52:                                      ; preds = %check_int51
  %printf_int56 = call i32 (ptr, ...) @printf(ptr @int_format_string.1, i64 2)
  br label %print_end55

print_float53:                                    ; preds = %check_int51
  %printf_float57 = call i32 (ptr, ...) @printf(ptr @float_format_string.2, double 2.000000e+00)
  br label %print_end55

print_string54:                                   ; preds = %else49
  %printf_string58 = call i32 (ptr, ...) @printf(ptr @string_format_string.3, ptr inttoptr (i64 2 to ptr))
  br label %print_end55

print_end55:                                      ; preds = %print_string54, %print_float53, %print_int52
  br label %ifcont50

check_int59:                                      ; preds = %else
  br i1 true, label %print_int60, label %print_float61

print_int60:                                      ; preds = %check_int59
  %printf_int64 = call i32 (ptr, ...) @printf(ptr @int_format_string.4, i64 3)
  br label %print_end63

print_float61:                                    ; preds = %check_int59
  %printf_float65 = call i32 (ptr, ...) @printf(ptr @float_format_string.5, double 3.000000e+00)
  br label %print_end63

print_string62:                                   ; preds = %else
  %printf_string66 = call i32 (ptr, ...) @printf(ptr @string_format_string.6, ptr inttoptr (i64 3 to ptr))
  br label %print_end63

print_end63:                                      ; preds = %print_string62, %print_float61, %print_int60
  br label %ifcont
}

declare i32 @printf(ptr, ...)
